# codegraph-rust

./: .clippy.toml  .codegraph.toml.example  .dockerignore  .dockerignore.security  .env.example  .gitignore  .gitignore.codegraph  AGENT_FRAMEWORKS_REFERENCE.md  AGENT_FRAMEWORK_DECISION.md  AGENT_STATUS_COMMAND.md  ALL_PERFORMANCE_OPTIMIZATIONS.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_CD_README.md  CLAUDE.md  CLEAN_INSTALL.md  CODEGRAPH-MCP-TOOLS-GUIDE.md  CODEX_JOURNAL.md  CONTAINERIZATION.md  CONTRIBUTING.md  CPU_CACHE_OPTIMIZATION_SUMMARY.md  Cargo.toml  CodeGraph-Technical-Implementation.md  DEBUG_LOGGING.md  DEPENDENCY_ANALYSIS_PROMPTS_SUMMARY.md  DEPLOYMENT_ARCHITECTURE.md  DUAL_MODE_SEARCH_PLAN.md  Dockerfile  Dockerfile.minimal  Dockerfile.optimized  FAQ-TROUBLESHOOTING.md  FEATURE_INVENTORY.md  HTTP2_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  INCREMENTAL_INDEXING_IMPLEMENTATION.md  INSTALLATION_GUIDE.md  LMSTUDIO_SETUP.md  MCP_IMPROVEMENTS.md  MEMORY_PROFILER_README.md  (+86 more)
crates/codegraph-ai/: Cargo.toml
crates/codegraph-ai/src/: agentic_schemas.rs  anthropic_provider.rs  lib.rs  llm_factory.rs  llm_provider.rs  openai_compatible_provider.rs  openai_llm_provider.rs  qwen_client.rs  qwen_simple.rs
crates/codegraph-api/: Cargo.toml  GRAPHQL_RESOLVERS.md  README.md  build.rs
crates/codegraph-api/benches/: streaming_benchmarks.rs
crates/codegraph-api/examples/: basic_server.rs  graphql_client.rs  parse_file.rs
crates/codegraph-api/src/: auth.rs  connection_pool.rs  enhanced_health.rs  error.rs  event_bus.rs  graph_stub.rs  handlers.rs  health.rs  http2_handlers.rs  http2_optimizer.rs  lb_proxy.rs  leak_guard.rs  lib.rs  main.rs  metrics.rs  mutations.rs  parser_ext.rs  queries.rs  rate_limit.rs  routes.rs  schema.rs  semantic_search_ext.rs  server.rs  service_registry.rs  state.rs  streaming_handlers.rs  subscriptions.rs  test_helpers.rs  vector_handlers.rs  vector_store_ext.rs  versioning_handlers.rs
crates/codegraph-api/tests/: api_integration.rs  health_monitoring_test.rs
crates/codegraph-cache/: Cargo.toml  README_READAHEAD.md
crates/codegraph-cache/benches/: cache_benchmark.rs  cache_layout_benchmark.rs  readahead_benchmark.rs
crates/codegraph-cache/examples/: memory_profiler_demo.rs  readahead_demo.rs
crates/codegraph-cache/src/: cache.rs  cache_optimized.rs  dashboard.rs  embedding_cache.rs  faiss_cache.rs  invalidation.rs  lib.rs  memory.rs  metrics.rs  optimized_io.rs  profiler.rs  query_cache.rs  readahead_integration.rs  readahead_optimizer.rs  storage.rs
crates/codegraph-cache/static/: dashboard.html
crates/codegraph-cache/tests/: cache_tests.rs
crates/codegraph-cli/: Cargo.toml  README.md
crates/codegraph-cli/src/: main.rs
crates/codegraph-concurrent/: Cargo.toml  README.md
crates/codegraph-concurrent/src/: graph.rs  lib.rs  mpmc.rs  spsc.rs
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/benches/: core_micro.rs
crates/codegraph-core/src/: advanced_config.rs  arena.rs  buffer_pool.rs  cli_config.rs  compression.rs  config.rs  config_manager.rs  embedding_config.rs  error.rs  lib.rs  mmap.rs  node.rs  optimization_coordinator.rs  optimized_types.rs  performance_config.rs  performance_monitor.rs  rerank_config.rs  rkyv_support.rs  security.rs  shared.rs  traits.rs  types.rs  validation.rs  versioning.rs
crates/codegraph-core/tests/: config_integration_test.rs
crates/codegraph-git/: Cargo.toml
crates/codegraph-git/src/: errors.rs  history.rs  hooks.rs  lib.rs  merge.rs  repo.rs  types.rs  watcher.rs
crates/codegraph-git/tests/: basic.rs
crates/codegraph-graph/: Cargo.toml  README.md
crates/codegraph-graph/benches/: simple_traversal_benchmarks.rs  traversal_benchmarks.rs
crates/codegraph-graph/migrations/: 001_initial_schema.sql  002_graph_functions.surql
crates/codegraph-graph/src/: cache.rs  delta.rs  delta_processor.rs  edge.rs  edges.rs  file_watcher.rs  git_like_versioning.rs  graph.rs  graph_functions.rs  graph_updater.rs  incremental.rs  io_batcher.rs  lib.rs  lib_core.rs  nodes.rs  pipeline.rs  progress_tracker.rs  recovery.rs  storage.rs  surrealdb_migrations.rs  surrealdb_schema.rs  surrealdb_storage.rs  tests.rs  transactional_graph.rs  traversal.rs  update_scheduler.rs  versioned_storage.rs
crates/codegraph-graph/tests/: schema_indexes_test.rs  semantic_search_nodes_via_chunks_test.rs  storage_tests.rs  versioning_tests.rs
crates/codegraph-lb/: Cargo.toml
crates/codegraph-lb/src/: failover.rs  health.rs  lib.rs  metrics.rs  shaping.rs  types.rs
crates/codegraph-lb/tests/: balancers.rs
crates/codegraph-mcp/: Cargo.toml  README.md
crates/codegraph-mcp-autoagents/: Cargo.toml
crates/codegraph-mcp-autoagents/src/: lib.rs
crates/codegraph-mcp-core/: Cargo.toml
crates/codegraph-mcp-daemon/: Cargo.toml
crates/codegraph-mcp-rig/: Cargo.toml
crates/codegraph-mcp-server/: Cargo.toml
crates/codegraph-mcp-tools/: Cargo.toml
crates/codegraph-napi/: Cargo.toml  GRAPH_FUNCTIONS_GUIDE.md  README.md  example-graph.ts  example.ts  package.json
crates/codegraph-parser/: Cargo.toml  README.md
crates/codegraph-queue/: Cargo.toml
crates/codegraph-vector/: Cargo.toml
crates/codegraph-zerocopy/: Cargo.toml
crates/core-rag-mcp-server/: Cargo.toml  README.md
mcp_python_sdk/: README.md  pyproject.toml
mcp_python_sdk/docs/: index.md
mcp_python_sdk/mcp_sdk/: client.py  connection.py  exceptions.py
mcp_python_sdk/mcp_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_python_sdk/tests/: test_client.py  test_connection.py
scripts/: Cargo.toml  blue_green_deploy.sh  build_cross.sh  compare_bench.py  deploy_k8s.sh  docker-build.sh  export_leaks.sh  generate_bench_report.py  generate_jwt_secret.rs  grade_features.py  health_check.sh  measure_baseline_performance.rs  performance_baseline_report.json  run_benchmarks.sh  smoke_test.sh  strip_compress.sh  switch_traffic.sh  validate_deployment_scripts.sh
scripts/deploy/: validate.sh
scripts/load/: k6_api_e2e.js  run.sh
scripts/perf/: regression.sh
scripts/src/: main.rs
tests/integration/: Cargo.toml
(+626 files in other folders)
