[workspace]
members = [
    "crates/codegraph-core",
    "crates/codegraph-vector",
    "crates/codegraph-cache",
    "crates/codegraph-parser",
    "crates/codegraph-mcp",
    "crates/codegraph-queue",
    "crates/codegraph-git",
    "crates/codegraph-concurrent",
    "crates/codegraph-graph",
    "crates/codegraph-zerocopy",
    "crates/codegraph-lb",
    "crates/codegraph-ai",
    "crates/codegraph-api",
    "crates/core-rag-mcp-server",
    "scripts",
    "tests/integration"
]
default-members = [
    "crates/codegraph-core",
    "crates/codegraph-vector",
    "crates/codegraph-ai",
    "crates/codegraph-mcp",
    "crates/codegraph-git"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CodeGraph Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/codegraph/embedding-system"

[workspace.dependencies]
fastrand = "2.0"
governor = { version = "0.6.0" }
lazy_static = "1.4.0"
# Async Runtime
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zero-copy serialization
rkyv = { version = "0.8", features = ["alloc", "std"] }
bytecheck = "0.8"
rend = "0.5"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
regex = "1.10"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Parallel Processing
rayon = "1.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
crossbeam-queue = "0.3"
crossbeam-skiplist = "0.1"
arc-swap = "1.7"


# System Information
num_cpus = "1.16"
sysinfo = "0.30"

# Database
rocksdb = "0.22"

# Vector Search (FAISS bindings and scientific computing)
faiss = "0.12"
ndarray = "0.15"

# OpenAI API client
# Minimize reqwest features for smaller binaries; prefer system TLS
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }


# Additional utilities
bincode = "1.3"
dashmap = "6.0"
parking_lot = "0.12"
tokio-util = "0.7"
tokio-uring = { version = "0.4" }

# File system monitoring and diff processing
notify = "6.1"
similar = "2.4"
memmap2 = "0.9"
flate2 = "1.0"
# Compression algorithms
zstd = "0.13"
lz4_flex = "0.11"
globset = "0.4"
ignore = "0.4"
rand = "0.8"

# Git integration
git2 = "0.20"

# Tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"
http = "1.1"
prometheus = { version = "0.13", features = ["process"] }

# OpenAPI / Swagger documentation for Axum
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Memory leak detection and tracking (optional, feature-gated in binaries)
memscope-rs = "0.1.4"

# WebSocket support
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
url = "2.5"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
once_cell = "1.19"
hashbrown = "0.14"
rustc-hash = "1.1"
bytes = "1.6"

# Memory allocator + profiling
tikv-jemallocator = { version = "0.5", default-features = true }
tikv-jemalloc-ctl = "0.5"
backtrace = "0.3"

# Configuration
config = "0.14"
schemars = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
base64 = "0.22"

# Security
jsonwebtoken = "9.3"
argon2 = "0.5"

# Testing
tempfile = "3.8"
tokio-test = "0.4"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

# LRU cache utility
lru = "0.12"

# Official MCP Rust SDK
rmcp = { version = "0.6.0", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Internal crates
codegraph-core = { path = "crates/codegraph-core" }
codegraph-graph = { path = "crates/codegraph-graph" }
codegraph-parser = { path = "crates/codegraph-parser" }
codegraph-vector = { path = "crates/codegraph-vector" }
codegraph-cache = { path = "crates/codegraph-cache" }
codegraph-api = { path = "crates/codegraph-api" }
codegraph-mcp = { path = "crates/codegraph-mcp" }
codegraph-git = { path = "crates/codegraph-git" }
codegraph-zerocopy = { path = "crates/codegraph-zerocopy" }
core-rag-mcp-server = { path = "crates/core-rag-mcp-server" }
codegraph-ai = { path = "crates/codegraph-ai" }


# Development dependencies


[profile.release]
# Performance-oriented release (kept as-is for general builds)
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.test]
opt-level = 1
debug = true

# Size-optimized release profile for smallest possible binaries
[profile.release-size]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
debug = false
overflow-checks = false
