[package]
name = "measure_baseline_performance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
codegraph-core = { path = "../crates/codegraph-core" }
