[package]
name = "codegraph-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Advanced AI-powered code analysis: semantic search, clone detection, impact analysis, recommendations, cross-repo search"

[dependencies]
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }
codegraph-vector = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
similar = { workspace = true }
arc-swap = { workspace = true }
num_cpus = { workspace = true }
