[package]
name = "codegraph-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Advanced AI-powered code analysis: semantic search, clone detection, impact analysis, recommendations, cross-repo search"

[dependencies]
codegraph-core = { workspace = true }
# NOTE: Re-enabling codegraph-graph for AI-powered symbol resolution
codegraph-graph = { workspace = true }
codegraph-vector = { workspace = true, features = ["faiss"] }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
arc-swap = { workspace = true }
num_cpus = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
anthropic = []
openai-llm = []
openai-compatible = []
all-cloud-providers = ["anthropic", "openai-llm", "openai-compatible"]
