[package]
name = "codegraph-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for CodeGraph using Axum"

[dependencies]
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }
codegraph-parser = { workspace = true }
codegraph-vector = { workspace = true }
memscope-rs = { workspace = true, optional = true }

axum = { workspace = true }
tower = { workspace = true }
# Enable compression features for response compression
tower-http = { workspace = true, features = ["compression-br", "compression-gzip", "compression-deflate", "compression-zstd", "trace", "cors"] }
hyper = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-stream = "0.3"
# Streaming responses for large datasets
axum-streams = { version = "0.23", features = ["json", "csv", "text"] }
futures = { workspace = true }

# Auth
jsonwebtoken = "9.3.0"
governor = { workspace = true, features = ["std"] }
prometheus = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
hyper = { workspace = true }
criterion = { workspace = true }
axum-test = "18.1"
async-trait = { workspace = true }
tempfile = { workspace = true }

[features]
# Enable runtime memory leak detection, stack traces, and Prometheus metrics.
# This pulls in a global tracking allocator from memscope-rs and adds routes
# for memory stats and leak report exports.
leak-detect = ["dep:memscope-rs"]

[[bench]]
name = "api_benchmarks"
harness = false
path = "src/graphql/benchmarks.rs"

[[bench]]
name = "streaming_benchmarks"
harness = false
path = "benches/streaming_benchmarks.rs"

 
