[package]
name = "codegraph-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI-powered caching system for CodeGraph vector operations"

[dependencies]
codegraph-core = { workspace = true }
faiss = { workspace = true, optional = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
backtrace = { workspace = true }
memmap2 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
dashmap = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rocksdb = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["cors", "fs"] }
http = { workspace = true }
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
fastrand = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }

[[bench]]
name = "cache_benchmark"
harness = false

[features]
default = ["faiss", "persistent"]
faiss = ["dep:faiss"]
persistent = ["dep:memmap2", "dep:flate2"]
gpu = ["faiss/gpu"]
readahead = []

[[example]]
name = "memory_profiler_demo"
path = "examples/memory_profiler_demo.rs"
required-features = ["demo"]

[[example]]
name = "readahead_demo"
path = "examples/readahead_demo.rs"
required-features = ["demo"]
