[package]
name = "codegraph-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI-powered caching system for CodeGraph vector operations"

[dependencies]
codegraph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam-channel = { workspace = true }
sha2 = { workspace = true }
fastrand = { workspace = true }
once_cell = "1.19"
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



[features]
default = []
readahead = []
demo = []

[[example]]
name = "memory_profiler_demo"
path = "examples/memory_profiler_demo.rs"
required-features = ["demo"]

[[example]]
name = "readahead_demo"
path = "examples/readahead_demo.rs"
required-features = ["demo"]
