[package]
name = "codegraph-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "codegraph"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Colored terminal output
colored = "2.1"

# Local crates
codegraph-core = { path = "../codegraph-core" }
codegraph-api = { path = "../codegraph-api" }
