[package]
name = "codegraph-concurrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossbeam-utils = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-skiplist = { workspace = true }
arc-swap = { workspace = true }

codegraph-core = { path = "../codegraph-core" }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
loom = "0.7"

[features]
loom = []
