[package]
name = "codegraph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for the CodeGraph system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

# Zero-copy and serialization support
bytes = "1.6"

# Optional arena allocator and zero-copy archiving
bumpalo = "3.15"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"

[dev-dependencies]
tokio-test = { workspace = true }
