[package]
name = "codegraph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for the CodeGraph system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }

# Memory-mapped file support
memmap2 = { workspace = true }

# Zero-copy and serialization support
bytes = "1.6"

# Optional arena allocator and zero-copy archiving
bumpalo = "3.15"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory"
] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
