[package]
name = "codegraph-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Git repository integration for CodeGraph using libgit2 and notify"

[dependencies]
git2 = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["watch"]
watch = []

[dev-dependencies]
tempfile = { workspace = true }
